Fixed more bugs

--- a/public/404.html
+++ b/public/404.html
@@ -2,6 +2,20 @@
 <html>
   <head>
     <meta charset="UTF-8" />
+    <meta property="og:title" content="Join My Newsletter" />
+    <meta property="og:description" content="Exclusive information and tips regarding software development, marketing, and the philosophy behind it all." />
+    <meta property="og:image" content="https://zachredder.com/og-newsletter.png" />
+    <meta property="og:url" content="https://zachredder.com/newsletter" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Join My Newsletter" />
+    <meta
+        name="twitter:description"
+        content="Exclusive information and tips regarding software development, marketing, and the philosophy behind it all."
+    />
+    <meta
+        name="twitter:image"
+        content="https://zachredder.com/og-newsletter.png"
+    />
     <script>
       // Redirect all paths to index.html
       var pathname = window.location.pathname;
