--- a/public/404.html
+++ b/public/404.html
@@ -16,12 +16,13 @@
         name="twitter:image"
         content="https://zachredder.com/og-newsletter.png"
     />
-    <script>
+    <!-- <script>
       // Redirect all paths to index.html
       var pathname = window.location.pathname;
       window.location.replace("/?redirect=" + pathname);
-    </script>
+    </script> -->
   </head>
   <body>
+    <div id="root"></div>
   </body>
 </html>
