--- a/public/404.html
+++ b/public/404.html
@@ -2,12 +2,9 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <script>
-      // Redirect all paths to index.html
-      var pathname = window.location.pathname;
-      window.location.replace("/?redirect=" + pathname);
-    </script>
+    <title>404 - Not Found</title>
   </head>
   <body>
+    <h1>Page Not Found</h1>
   </body>
 </html>
