--- a/public/404.html
+++ b/public/404.html
@@ -2,9 +2,12 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>404 - Not Found</title>
+    <script>
+      // Redirect all paths to index.html
+      var pathname = window.location.pathname;
+      window.location.replace("/?redirect=" + pathname);
+    </script>
   </head>
   <body>
-    <h1>Page Not Found</h1>
   </body>
 </html>
